--- a/ErreursPython.ipynb
+++ b/ErreursPython.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Erreurs en Python (le bug est entre la chaise et le clavier)\n",
-    "\n",
-    "Voici quelques erreurs que l'on peut faire en débutant Python... Certaines sont difficiles à trouver. Vos élèves les feront...\n",
+    "# Erreurs en Python \n",
+    "Voici quelques erreurs que l'on peut faire en débutant Python... Certaines sont difficiles à trouver. \n",
     "\n",
     "\n",
     "## Erreur numéro 1\n",
@@ -491,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
